[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/theme_b/atkinson hyperlegible bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/theme_b/basic.theme" type="Theme" id=2]
[ext_resource path="res://addons/basic_options/options.gd" type="Script" id=3]

[node name="options" type="CanvasLayer"]
pause_mode = 2
layer = 125
script = ExtResource( 3 )

[node name="fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.376471 )

[node name="MarginContainer" type="MarginContainer" parent="fade"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 50.0
margin_right = -200.0
margin_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="fade/MarginContainer"]
margin_right = 1520.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="fade/MarginContainer/VBoxContainer"]
margin_right = 1520.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1

[node name="TabContainer" type="TabContainer" parent="fade/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 1520.0
margin_bottom = 929.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="fade/MarginContainer/VBoxContainer"]
margin_top = 933.0
margin_right = 1520.0
margin_bottom = 980.0
alignment = 1

[node name="back" type="Button" parent="fade/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 637.0
margin_right = 722.0
margin_bottom = 47.0
text = "Back"

[node name="title" type="Button" parent="fade/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 726.0
margin_right = 808.0
margin_bottom = 47.0
text = "Title"

[node name="exit" type="Button" parent="fade/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 812.0
margin_right = 882.0
margin_bottom = 47.0
text = "Exit"

[connection signal="pressed" from="fade/MarginContainer/VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="fade/MarginContainer/VBoxContainer/HBoxContainer/title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="fade/MarginContainer/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]
